--- a/Home.html
+++ b/Home.html
@@ -276,15 +276,17 @@
 					</div>
 					<p style=" color:#A5A6AD">________________________________________________________________________________________</p>   
 				 </div>
-				 <div class = "row mt-3">
-					<div class = "col-lg-2">
-						 <img class = "img-fluid mt-3" src="assets/img/shorouq1.png" alt="">
-					</div>
-					<div class = "col-lg-10">
-						 <h4 class = "mt-5">شروق المالكي</h4>
-					     <h4 >هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</h4>
-					</div>  
-				 </div>
+				<div class  = "comments">
+				     <div class = "row mt-3">
+					    <div class = "col-lg-2">
+						 <img class = "img-fluid mt-3 mr-5" src="assets/img/shorouq1.png" alt="">
+					    </div>
+					    <div class = "col-lg-10">
+						 <h4 class = "mt-3">شروق المالكي</h4>
+					     <p class= "mt-3">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</p>
+					     </div>  
+				     </div>
+				</div>
 				</div>
 				<!----comment section ends----->
 			</div>
