--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/rule.css" type="text/css">
     <link rel="stylesheet" href="assets/css/Home.css" type="text/css">
 
-    l
+    
 
 
 
@@ -130,17 +130,17 @@
 	<!---------fisrtSection start "backgroundSection------------->
     <div class="HomeSection mt-3 ">
 		<div class="IconBackground">
-			<ul>
-				<li >
+			<ul class = "navbar-nav">
+				<li class = "nav-item">
 					<a class="nav-link " href="#"><i class="fab fa-whatsapp"></i></a>
 				</li>
-				<li class = "mt-3">
+				<li class = " nav-item mt-3">
 					<a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
 				</li >
-				<li class = "mt-3">
+				<li class = " nav-item mt-3">
 					<a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
 				</li>
-				<li class = "mt-3" >
+				<li class = "nav-item mt-3" >
 					<a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
 				</li>
 			</ul>
@@ -188,7 +188,7 @@
 	<!--------- contentSection start----------------->
 	<div class = "contentSection">
 		<div class = "row mt-3 text-right">
-			<div class = "col-lg-9 rightSideContent">
+			<div class = "col-lg-9 col-md-10 rightSideContent">
 				<p>هل النظام الغذائي النباتي أكثر صحة من تناول اللحوم؟ وماذا يتوجب على النساء النباتيات أن يتناولن عند حملهن؟ اقرأ المزيد عن النباتيين والفيتامينات التي يحتاجونها</p>
 			    <img class = "img-fluid mt-3" src="assets/img/ADS 6.png" alt="" width = "900px" height="100px">
 			    <p class = "mt-3">التعريف الأبسط للنباتية هو استهلاك الغذاء النباتي هو التغذية دون اللحوم والأسماك والدواجن.</p>
@@ -215,12 +215,12 @@
 				<!----comment section start----->
 				<div class = "commentSection">
                 <div class = "row mt-3">
-					<div class = "col-lg-2">
+					<div class = "col-lg-2 col-md-2">
 						 <img class = "img-fluid mt-3" src="assets/img/shorouq.png" alt="">
 						 <span>مشرف</span>
 						 <h5 class = "text-center">عضو نشيط</h5>
 					</div>
-					<div class = "col-lg-10 CommentDesc">
+					<div class = "col-lg-10 col-md-10 CommentDesc">
 						 <h4 class = "mt-3">من قبل شروق المالكي - الأربعاء ، 25 ديسمبر 2013</h4>
 					     <h4 class = "mt-5">آخر تعديل - السبت ، 05 أكتوبر 2019</h4>
 					</div>
@@ -257,17 +257,17 @@
                     <div class = "subRelation">
 						<h2 >مواضيع ذات علاقة <br>________________</h2>
                         <div class = "row">
-							<div class = "col-lg-4">
+							<div class = "col-lg-4 col-md-4">
 								<img class = "img-fluid mt-3" src="assets/img/pic1.png" alt="" width = "800px">
 								<span>16 سبتمبر 2019</span>
 								<h3 class = " mt-3">أخطر 7 عمليات جراحية طارئة.. نسبة الوفاة تصل إلى 80 بالمئة</h3>
 							</div>
-							<div class = "col-lg-4">
+							<div class = "col-lg-4 col-md-4">
 								<img class = "img-fluid mt-3" src="assets/img/pic2.png" alt="" width = "800px">
 								<span>16 سبتمبر 2019</span>
 								<h3 class = " mt-3">الحامض (الليمون): فوائد مذهلة تفوق الخيال</h3>
 							</div>
-							<div class = "col-lg-4">
+							<div class = "col-lg-4 col-md-4">
 								<img class = "img-fluid mt-3" src="assets/img/pic3.png" alt="" width = "800px">
 								<span>16 سبتمبر 2019</span>
 								<h3 class = " mt-3">تجاعيد العين: أسباب عديدة وعلاجات طبية وطبيعية</h3>
@@ -276,21 +276,100 @@
 					</div>
 					<p style=" color:#A5A6AD">________________________________________________________________________________________</p>   
 				 </div>
-				<div class  = "comments">
+				<div class  = "comments mb-5">
 				     <div class = "row mt-3">
-					    <div class = "col-lg-2">
-						 <img class = "img-fluid mt-3 mr-5" src="assets/img/shorouq1.png" alt="">
+					    <div class = "col-lg-2 col-md-2">
+						 <img class = "img-fluid mt-3 mr-3 " src="assets/img/shorouq1.png" alt="">
 					    </div>
-					    <div class = "col-lg-10">
-						 <h4 class = "mt-3">شروق المالكي</h4>
-					     <p class= "mt-3">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</p>
-					     </div>  
-				     </div>
+					    <div class = "col-lg-10 col-md-10">
+						   <div class="clearfix">
+							   <div class = "float-right">
+						           <h4 class = "mt-3">شروق المالكي</h4>
+					               <p class= "mt-3">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</p>
+								   <ul class = "navbar-nav"><li>
+									   <a href="">رد</a>
+									   <a href=""><i class="fas fa-comment-alt"></i></a>
+									   <a href="">20</a>
+									   <a class = "mr-3" href="">أعجبني</a>
+									   <a href=""><i class="fas fa-heart"></i></a>
+									   <a href="">20</a>
+									</li></ul>
+								</div> 
+								<div class = "float-right">
+									<ul class = "navbar-nav"><li class = "nav-item">
+										<h5 class = "mt-3">4:05AM 05/10/2019</h5></li>
+									</ul>
+								</div>  
+				            </div>
+				        </div>
+					</div>
+					<div class = "row mt-3">
+							<div class = "col-lg-2 col-md-2">
+							 <img class = "img-fluid mt-3 mr-3" src="assets/img/shorouq1.png" alt="">
+							</div>
+							<div class = "col-lg-10 col-md-10">
+							   <div class="clearfix">
+								   <div class = "float-right">
+									   <h4 class = "mt-3">شروق المالكي</h4>
+									   <p class= "mt-3">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</p>
+									   <ul class = "navbar-nav"><li>
+										   <a href="">رد</a>
+										   <a href=""><i class="fas fa-comment-alt"></i></a>
+										   <a href="">20</a>
+										   <a class = "mr-3" href="">أعجبني</a>
+										   <a href=""><i class="fas fa-heart"></i></a>
+										   <a href="">20</a>
+										</li></ul>
+										
+									</div> 
+									<div class = "float-right">
+										<ul class = "navbar-nav"><li class = "nav-item">
+											<h5 class = "mt-3">4:05AM 05/10/2019</h5></li>
+										</ul>
+									</div>  
+								</div>
+								<div class = "clearfix">
+								    <img class = "img-fluid mt-3 mr-5 float-right" src="assets/img/alina.png"alt="">
+									<div class = float-right>
+									    <p class= "mt-3 mr-3 ">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</p>
+									    <ul class = "navbar-nav"><li class = "nav-item">
+											<h5>4:05AM  05/10/2019</h5></li>
+									    </ul>
+								    </div>
+								</div>
+							</div>
+						</div>
+					<div class = "row mt-3">
+							<div class = "col-lg-2 col-md-2">
+								<img class = "img-fluid mt-3 mr-3" src="assets/img/shorouq1.png" alt="">
+							</div>
+							<div class = "col-lg-10 col-md-10">
+								<div class="clearfix">
+									<div class = "float-right">
+										<h4 class = "mt-3">شروق المالكي</h4>
+										<p class= "mt-3">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</p>
+										<ul class = "navbar-nav"><li>
+											<a href="">رد</a>
+											<a href=""><i class="fas fa-comment-alt"></i></a>
+											<a href="">20</a>
+											<a class = "mr-3" href="">أعجبني</a>
+											<a href=""><i class="fas fa-heart"></i></a>
+											<a href="">20</a>
+										</li></ul>
+									</div> 
+									<div class = "float-right">
+										<ul class = "navbar-nav"><li class = "nav-item">
+											<h5 class = "mt-3">4:05AM 05/10/2019</h5></li>
+										</ul>
+									</div>  
+								</div>
+							</div>
+						</div>   
 				</div>
-				</div>
+			</div>
 				<!----comment section ends----->
 			</div>
-			<div class = "col-lg-3 leftSideContent">
+			<div class = "col-lg-3 col-md-2 leftSideContent">
 				<h2 >مواضيع ذات علاقة
 					<span>__________________</span></h2>
 					<img class = "img-fluid mt-3" src="assets/img/num1.png" alt=""  width = "230px" height="200px">
