--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<a class="nav-link colorNav" href="Home.html">الرئيسية</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link colorNav" href="#">الصحة</a>
+					<a class="nav-link colorNav" href="healthy.html">الصحة</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link colorNav" href="#">التقنية</a>
