--- a/healthy.html
+++ b/healthy.html
@@ -286,7 +286,9 @@
                 <nav >
                     <ul class="pagination mt-5">
                         <li class="page-item">
-                        </a>
+							<a class="page-link" href="#" aria-label="Previous">
+									<h5> <</h5>
+							</a>
                         </li>
                         <li class="page-item"><a class="page-link" href="#">5</a></li>
                         <li class="page-item"><a class="page-link" href="#">4</a></li>
@@ -296,7 +298,8 @@
         
                         <li class="page-item">
                         <a class="page-link" href="#" aria-label="Next">
-                        </a>
+							<h5>></h5>
+						</a>
                         </li>
                     </ul>
                 </nav>
