--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	 <link href="https://fonts.googleapis.com/css?family=Almarai:400,700|Cairo&display=swap" rel="stylesheet">	 <meta name="viewport"  content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
+	<link rel="stylesheet" href="assets/css/Home.css" type="text/css">
+
 
 </head>
 
@@ -186,91 +188,45 @@
 	<!---slider section ends-->
 
 	<!---------bodySection starts------------------->
-	<div class = "ArticlesSection">
-		<div class = "row mt-5">
-			<div class = "col-lg-4">
-					<div class="card mb-3">
-							<div class="row no-gutters">
-							    <div class="col-md-7">
-								<div class="card-body text-right">
-								    <h5 class="card-title">مقالات قصيرة عن الحياة</h5>
-									    <ul class = "navbar-nav ">
-									  <li class = "nav-item ">
-											<a href="" class = "list active">
-													<i class="fas fa-star"></i>
-												</a>
-												<a href="" class = "list active">
-														<i class="fas fa-star"></i>
-												</a>
-												<a href="" class = "list active">
-														<i class="fas fa-star"></i>
-												</a>
-												<a href="" class = "list ">
-													<i class="fas fa-star"></i>
-												</a>
-												<a href="" class = "list">
-													<i class="fas fa-star"></i>
-												</a>
-											<a href="" class = "list mr-5"><i class="far fa-eye"></i></a>
-											<span>1500</span>
-										</li></ul>
-									<p class="card-text">الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية
-										 تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز 
-										الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>
- 
-								  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-								</div>
-							    </div>
-							    <div class="col-md-4">
-									<img src="assets/img/backpack.png" class="card-img mr-3" alt="...">
-							    </div>
-							</div>
+	<div class = "mainSection">
+			<div class = "row mt-5 text-right">
+				<div class = "col-lg-9 col-md-10 rightSideContent">
+					<div class = "row">
+						<div class = "col-lg-4">
+							<div class ="triangle"></div>
 						</div>
-			</div>
-			<div class = "col-lg-4 mr-6">
-					<div class="card mb-3">
-							<div class="row no-gutters">
-							    <div class="col-md-7">
-								<div class="card-body text-right mr-3">
-								    <h5 class="card-title">مقالات قصيرة عن الحياة</h5>
-									    <ul class = "navbar-nav ">
-									  <li class = "nav-item ">
-											<a href="" class = "list active">
-													<i class="fas fa-star"></i>
-												</a>
-												<a href="" class = "list active">
-														<i class="fas fa-star"></i>
-												</a>
-												<a href="" class = "list active">
-														<i class="fas fa-star"></i>
-												</a>
-												<a href="" class = "list ">
-													<i class="fas fa-star"></i>
-												</a>
-												<a href="" class = "list">
-													<i class="fas fa-star"></i>
-												</a>
-											<a href="" class = "list mr-5"><i class="far fa-eye"></i></a>
-											<span>1500</span>
-										</li></ul>
-									<p class="card-text"><br>الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية
-										 تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز 
-										الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>
- 
-								  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-								</div>
-							    </div>
-							    <div class="col-md-4">
-									<img src="assets/img/backpack.png" class="card-img mr-4" alt="...">
-							    </div>
-							</div>
+					</div>
+				</div>
+				<div class = "col-lg-3 col-md-2 leftSideContent text-right">
+					<img class = "img-fluid " src="assets/img/ADS 2.png" alt=""  width = "230px">
+					<h2 class = " mt-3">أهم المقالات
+						<span>__________________</span></h2>
+						<img class = "img-fluid mt-3" src="assets/img/num1.png" alt=""  width = "230px" height="200px">
+						<h3 class = " mt-3">فن اختيار شريك الحياة</h3>
+						<div class = "squareP" >
+								<p>الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>
 						</div>
+						<img class = "img-fluid mt-3" src="assets/img/num2.png" alt=""  width = "230px" height="200px">
+						<h3 class = " mt-3">20سنة على صدور أول كتاب في
+								<br> سلسلة هاري بوتر</h3>
+						<div class = "squareP" >
+							<p>الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>
+						</div>
+						<img class = "img-fluid mt-3" src="assets/img/num3.png" alt=""  width = "230px" height="200px">
+						<h3 class = "mt-3">أعلى 10 مرتفعات في العالم</h3>
+						<div class = "squareP" >
+								<p>الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>
+						</div>
+						<img class = "img-fluid mt-3" src="assets/img/num1.png" alt=""  width = "230px" height="200px">
+						<h3 class = " mt-3">فن اختيار شريك الحياة</h3>
+						<div class = "squareP" >
+								<p>الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>
+						</div>
+						<img src="assets/img/ADS 5.png" class = "img-fluid mt-3" alt="" width = "230px">
+						<br><br><br><br>
+				</div>
 			</div>
-			<div class = "col-lg-4">
-				<img class = "Imgadd7" src="assets/img/ADS 2.png" alt="" >
-			</div>	
 		</div>
-	</div>
 	<!---------bodySection ends------------------->
 
 
