--- a/index.html
+++ b/index.html
@@ -192,8 +192,29 @@
 			<div class = "row mt-5 text-right">
 				<div class = "col-lg-9 col-md-10 rightSideContent">
 					<div class = "row">
-						<div class = "col-lg-4">
-							<div class ="triangle"></div>
+						<div class = "col-lg-6">
+							<div class ="triangle">
+								<div class ="clearfix">
+									<div class = "float-right mr-3">
+									   <h2 class = "mt-3">مقالات كثيرة عن الحياة</h2>
+									   
+									</div>
+									<div class = "float-left">
+                                        <img src="assets/img/backpack.png" height="250" width = "225px" alt="">
+									</div>
+									<ul class = "navbar-nav"><li  class = "nav-item ">
+											<a href=""><i class="far fa-eye">1500</i></a>
+											<a class = " active" href=""><i class="fas fa-star"></i></a>
+											 <a class = " active" href=""><i class="fas fa-star"></i></a>
+											 <a class = " active" href=""><i class="fas fa-star"></i></a>
+											 <a href="">	<i class="fas fa-star"></i></a>
+											 <a href=""><i class="fas fa-star"></i></a>
+										</li></ul>
+								</div>
+							</div>
+						</div>
+						<div class = "col-lg-6">
+								<div class ="triangle triangle2"></div>
 						</div>
 					</div>
 				</div>
