--- a/index.html
+++ b/index.html
@@ -197,16 +197,25 @@
 								<div class ="clearfix">
 									<div class = "float-right">
 									   <h2 class = "mt-3 mr-3">مقالات كثيرة عن الحياة</h2>
-									   <ul class = "navbar-nav"><li  class = "nav-item ">
-											<a class = " active" href=""><i class="fas fa-star"></i></a>
-											 <a class = " active" href=""><i class="fas fa-star"></i></a>
-											 <a class = " active" href=""><i class="fas fa-star"></i></a>
-											 <a href="">	<i class="fas fa-star"></i></a>
-											 <a href=""><i class="fas fa-star"></i></a>&nbsp;&nbsp;
-											 <a href="">1500<i class="far fa-eye"></i></a>
+									   <ul class = "navbar-nav">
+										   <li  class = "nav-item ">
+												<a class = " active" href=""><i class="fas fa-star"></i></a>
+												<a class = " active" href=""><i class="fas fa-star"></i></a>
+												<a class = " active" href=""><i class="fas fa-star"></i></a>
+												<a href="">	<i class="fas fa-star"></i></a>
+												<a href=""><i class="fas fa-star"></i></a>&nbsp;&nbsp;
+												<a href="">1500<i class="far fa-eye"></i></a>
+									        </li>
+										</ul>
+										<div class = "infoDesc mr-3">
+										<p >الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>   
+										</div> 
+										<div class= "clearfix">
+											<div class = "float-right">
+												<a href=""><i class="far fa-calendar-alt">29/09/2019</i></a>
 
-									</li></ul>
-									   
+											</div>
+										</div>
 									</div>
 									<div class = "float-left">
                                         <img src="assets/img/backpack.png" height="250" width = "220px" alt="">
