--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="assets/css/Home.css" type="text/css">
 
 
+
+
 </head>
 
 <body>
@@ -192,7 +194,7 @@
 			<div class = "row mt-5 text-right">
 				<div class = "col-lg-9 col-md-10 rightSideContent">
 					<div class = "row">
-						<div class = "col-lg-6">
+						<div class = "col-lg-6 col-md-12">
 							<div class ="triangle">
 								<div class ="clearfix">
 									<div class = "float-right">
@@ -208,27 +210,286 @@
 									        </li>
 										</ul>
 										<div class = "infoDesc mr-3">
-										<p >الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>   
+										<p >الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك الشيء البعيد...</p>   
 										</div> 
-										<div class= "clearfix">
+										<div class= "clearfix mr-3 lastLine">
 											<div class = "float-right">
-												<a href=""><i class="far fa-calendar-alt">29/09/2019</i></a>
-
+												<a href=""><i class="far fa-calendar-alt"></i></a>
+												<span>29/09/2019</span>
+											</div>
+											<div class="float-left iconLeft">
+												<ul class = "navbar-nav">
+													<li class = "nav-item">
+														<a  href="#"><i class="fab fa-whatsapp"></i></a>
+														<a  href="#"><i class="fab fa-facebook-f"></i></a>
+														<a  href="#"><i class="fab fa-twitter"></i></a>
+														<a  href="#"><i class="fab fa-instagram"></i></a>
+													</li>
+												</ul>
 											</div>
 										</div>
 									</div>
 									<div class = "float-left">
                                         <img src="assets/img/backpack.png" height="250" width = "220px" alt="">
+									    <span>حياة</span>
 									</div>
 									
 								</div>
 							</div>
 						</div>
-						<div class = "col-lg-6">
-								<div class ="triangle triangle2"></div>
+						<div class = "col-lg-6 col-md-12">
+							<div class ="triangle">
+									<div class ="clearfix">
+										<div class = "float-right">
+											<h2 class = "mt-3 mr-3">مقالات كثيرة عن الحياة</h2>
+											<ul class = "navbar-nav">
+												<li  class = "nav-item ">
+													<a class = " active" href=""><i class="fas fa-star"></i></a>
+													<a class = " active" href=""><i class="fas fa-star"></i></a>
+													<a class = " active" href=""><i class="fas fa-star"></i></a>
+													<a href="">	<i class="fas fa-star"></i></a>
+													<a href=""><i class="fas fa-star"></i></a>&nbsp;&nbsp;
+													<a href="">1500<i class="far fa-eye"></i></a>
+												</li>
+											</ul>
+											<div class = "infoDesc mr-3">
+											<p >الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك الشيء البعيد...</p>   
+											</div> 
+											<div class= "clearfix mr-3 lastLine">
+												<div class = "float-right">
+													<a href=""><i class="far fa-calendar-alt"></i></a>
+													<span>29/09/2019</span>
+												</div>
+												<div class="float-left iconLeft">
+													<ul class = "navbar-nav">
+														<li class = "nav-item">
+															<a  href="#"><i class="fab fa-whatsapp"></i></a>
+															<a  href="#"><i class="fab fa-facebook-f"></i></a>
+															<a  href="#"><i class="fab fa-twitter"></i></a>
+															<a  href="#"><i class="fab fa-instagram"></i></a>
+														</li>
+													</ul>
+												</div>
+											</div>
+										</div>
+										<div class = "float-left">
+											<img src="assets/img/backpack 2.png" height="250" width = "220px" alt="">
+											<span>حياة</span>
+										</div>
+									</div>
+								</div>
 						</div>
 					</div>
-				</div>
+					<div class = "row mt-5">
+						<div class = "col-lg-6">
+							<div class ="triangle">
+								<div class ="clearfix">
+									<div class = "float-right">
+										<h2 class = "mt-3 mr-3">مقالات كثيرة عن الحياة</h2>
+										<ul class = "navbar-nav">
+											<li  class = "nav-item ">
+												<a class = " active" href=""><i class="fas fa-star"></i></a>
+												<a class = " active" href=""><i class="fas fa-star"></i></a>
+												<a class = " active" href=""><i class="fas fa-star"></i></a>
+												<a href="">	<i class="fas fa-star"></i></a>
+												<a href=""><i class="fas fa-star"></i></a>&nbsp;&nbsp;
+												<a href="">1500<i class="far fa-eye"></i></a>
+											</li>
+										</ul>
+										<div class = "infoDesc mr-3">
+										<p >الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك الشيء البعيد...</p>   
+										</div> 
+										<div class= "clearfix mr-3 lastLine">
+											<div class = "float-right">
+												<a href=""><i class="far fa-calendar-alt"></i></a>
+												<span>29/09/2019</span>
+											</div>
+											<div class="float-left iconLeft">
+												<ul class = "navbar-nav">
+													<li class = "nav-item">
+														<a  href="#"><i class="fab fa-whatsapp"></i></a>
+														<a  href="#"><i class="fab fa-facebook-f"></i></a>
+														<a  href="#"><i class="fab fa-twitter"></i></a>
+														<a  href="#"><i class="fab fa-instagram"></i></a>
+													</li>
+												</ul>
+											</div>
+										</div>
+									</div>
+									<div class = "float-left">
+										<img src="assets/img/backpack 3.png" height="250" width = "220px" alt="">
+										<span>التغذية</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class = "col-lg-6">
+							<div class ="triangle">
+									<div class ="clearfix">
+										<div class = "float-right">
+											<h2 class = "mt-3 mr-3">مقالات كثيرة عن الحياة</h2>
+											<ul class = "navbar-nav">
+												<li  class = "nav-item ">
+													<a class = " active" href=""><i class="fas fa-star"></i></a>
+													<a class = " active" href=""><i class="fas fa-star"></i></a>
+													<a class = " active" href=""><i class="fas fa-star"></i></a>
+													<a href="">	<i class="fas fa-star"></i></a>
+													<a href=""><i class="fas fa-star"></i></a>&nbsp;&nbsp;
+													<a href="">1500<i class="far fa-eye"></i></a>
+												</li>
+											</ul>
+											<div class = "infoDesc mr-3">
+											<p >الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك الشيء البعيد...</p>   
+											</div> 
+											<div class= "clearfix mr-3 lastLine">
+												<div class = "float-right">
+													<a href=""><i class="far fa-calendar-alt"></i></a>
+													<span>29/09/2019</span>
+												</div>
+												<div class="float-left iconLeft">
+													<ul class = "navbar-nav">
+														<li class = "nav-item">
+															<a  href="#"><i class="fab fa-whatsapp"></i></a>
+															<a  href="#"><i class="fab fa-facebook-f"></i></a>
+															<a  href="#"><i class="fab fa-twitter"></i></a>
+															<a  href="#"><i class="fab fa-instagram"></i></a>
+														</li>
+													</ul>
+												</div>
+											</div>
+										</div>
+										<div class = "float-left">
+											<img src="assets/img/backpack 4.png" height="250" width = "220px" alt="">
+											<span>صحة</span>
+										</div>
+									</div>
+								</div>
+						</div>
+					</div>
+					<div class = "addSection mt-5 text-center"><img src="assets/img/ADS 3.png" width= "700px" alt=""></div>
+				    <div class = "row mt-5">
+						<div class = "col-lg-6">
+							<div class ="triangle">
+								<div class ="clearfix">
+									<div class = "float-right">
+										<h2 class = "mt-3 mr-3">مقالات كثيرة عن الحياة</h2>
+										<ul class = "navbar-nav">
+											<li  class = "nav-item ">
+												<a class = " active" href=""><i class="fas fa-star"></i></a>
+												<a class = " active" href=""><i class="fas fa-star"></i></a>
+												<a class = " active" href=""><i class="fas fa-star"></i></a>
+												<a href="">	<i class="fas fa-star"></i></a>
+												<a href=""><i class="fas fa-star"></i></a>&nbsp;&nbsp;
+												<a href="">1500<i class="far fa-eye"></i></a>
+											</li>
+										</ul>
+										<div class = "infoDesc mr-3">
+										<p >الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك الشيء البعيد...</p>   
+										</div> 
+										<div class= "clearfix mr-3 lastLine">
+											<div class = "float-right">
+												<a href=""><i class="far fa-calendar-alt"></i></a>
+												<span>29/09/2019</span>
+											</div>
+											<div class="float-left iconLeft">
+												<ul class = "navbar-nav">
+													<li class = "nav-item">
+														<a  href="#"><i class="fab fa-whatsapp"></i></a>
+														<a  href="#"><i class="fab fa-facebook-f"></i></a>
+														<a  href="#"><i class="fab fa-twitter"></i></a>
+														<a  href="#"><i class="fab fa-instagram"></i></a>
+													</li>
+												</ul>
+											</div>
+										</div>
+									</div>
+									<div class = "float-left">
+										<img src="assets/img/backpack 3.png" height="250" width = "220px" alt="">
+										<span>التغذية</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class = "col-lg-6">
+							<div class ="triangle">
+									<div class ="clearfix">
+										<div class = "float-right">
+											<h2 class = "mt-3 mr-3">مقالات كثيرة عن الحياة</h2>
+											<ul class = "navbar-nav">
+												<li  class = "nav-item ">
+													<a class = " active" href=""><i class="fas fa-star"></i></a>
+													<a class = " active" href=""><i class="fas fa-star"></i></a>
+													<a class = " active" href=""><i class="fas fa-star"></i></a>
+													<a href="">	<i class="fas fa-star"></i></a>
+													<a href=""><i class="fas fa-star"></i></a>&nbsp;&nbsp;
+													<a href="">1500<i class="far fa-eye"></i></a>
+												</li>
+											</ul>
+											<div class = "infoDesc mr-3">
+											<p >الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك الشيء البعيد...</p>   
+											</div> 
+											<div class= "clearfix mr-3 lastLine">
+												<div class = "float-right">
+													<a href=""><i class="far fa-calendar-alt"></i></a>
+													<span>29/09/2019</span>
+												</div>
+												<div class="float-left iconLeft">
+													<ul class = "navbar-nav">
+														<li class = "nav-item">
+															<a  href="#"><i class="fab fa-whatsapp"></i></a>
+															<a  href="#"><i class="fab fa-facebook-f"></i></a>
+															<a  href="#"><i class="fab fa-twitter"></i></a>
+															<a  href="#"><i class="fab fa-instagram"></i></a>
+														</li>
+													</ul>
+												</div>
+											</div>
+										</div>
+										<div class = "float-left">
+											<img src="assets/img/backpack 4.png" height="250" width = "220px" alt="">
+											<span>صحة</span>
+										</div>
+									</div>
+								</div>
+						</div>
+					</div>
+				<!----health section-->
+				    <div class = "health">
+					<div class = "row mt-5">
+					<div class = "col-lg-4 col-md-6">
+							<h2 ><a href=""><img src="assets/img/midicalIcon.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+								الصحة
+						</h2>
+						<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+						<img src="assets/img/pic1.png" width = "290px" alt="">
+						<span>30 سبتمبر 2019</span>
+
+						<h3 class = "mt-3">أخطر 7 عمليات جراحية طارئة.. نسبة الوفاة تصل إلى 80 بالمئة</h3>
+					</div>
+					<div class = "col-lg-4 col-md-6">
+							<h2 ><a href=""><img src="assets/img/imac.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+								التقنية
+						</h2>
+						<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+							<img src="assets/img/iPhone-11.png" width = "290px"  alt="">
+							<span>30 سبتمبر 2019</span>
+							<h3 class = "mt-3">بعد 4 أيام من الاستخدام: نظرة سريعة على آيفون 11 برو</h3>
+					</div>
+					<div class = "col-lg-4 col-md- mt+5">
+							<h2 ><a href=""><img src="assets/img/man.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+								الرجل
+						</h2>
+						<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+							<img src="assets/img/picture.png" width = "290px"  alt="">
+							<span>30 سبتمبر 2019</span>
+							<h3 class = "mt-3">6 أسئلة لا يجب أن تطرحيها على زوجك</h3>
+					</div>
+					</div>
+				    </div>
+				<!----health section-->
+				<div class = "addSection mt-5 text-center"><img src="assets/img/ADS 4.png" width= "900px" alt=""></div>
+				
+			    </div>
 				<div class = "col-lg-3 col-md-2 leftSideContent text-right">
 					<img class = "img-fluid " src="assets/img/ADS 2.png" alt=""  width = "230px">
 					<h2 class = " mt-3">أهم المقالات
