--- a/index.html
+++ b/index.html
@@ -488,7 +488,41 @@
 				    </div>
 				<!----health section-->
 				<div class = "addSection mt-5 text-center"><img src="assets/img/ADS 4.png" width= "900px" alt=""></div>
-				
+				<!---- secound health section-->
+				<div class = "health">
+						<div class = "row mt-5">
+						<div class = "col-lg-4 col-md-6">
+								<h2 ><a href=""><img src="assets/img/midicalIcon.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+								المرأة
+							</h2>
+							<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+							<img src="assets/img/woman.png" width = "290px" alt="">
+							<span>30 سبتمبر 2019</span>
+	
+							<h3 class = "mt-3">ماء الورد للشعر: فوائد واستخدامات عديدة</h3>
+						</div>
+						<div class = "col-lg-4 col-md-6">
+								<h2 ><a href=""><img src="assets/img/imac.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+									الطفل
+							</h2>
+							<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+								<img src="assets/img/child.png" width = "290px"  alt="">
+								<span>30 سبتمبر 2019</span>
+								<h3 class = "mt-3">أسباب جفاف بشرة طفلك وطرق علاجها</h3>
+						</div>
+						<div class = "col-lg-4 col-md- mt+5">
+								<h2 ><a href=""><img src="assets/img/man.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+									السياحة
+							</h2>
+							<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+								<img src="assets/img/home.png" width = "290px"  alt="">
+								<span>30 سبتمبر 2019</span>
+								<h3 class = "mt-3">أجمل البيوت في العالم</h3>
+						</div>
+						</div>
+						</div>
+					<!---- secound health section-->
+					<div class = "addSection mt-5 text-center"><img src="assets/img/ADS 6.png" width= "950px" alt=""></div>
 			    </div>
 				<div class = "col-lg-3 col-md-2 leftSideContent text-right">
 					<img class = "img-fluid " src="assets/img/ADS 2.png" alt=""  width = "230px">
