--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 				<div class = "health">
 						<div class = "row mt-5">
 						<div class = "col-lg-4 col-md-6">
-								<h2 ><a href=""><img src="assets/img/midicalIcon.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+								<h2 ><a href=""><img src="assets/img/girl.png" width = "25px" alt=""></a>&nbsp;&nbsp;
 								المرأة
 							</h2>
 							<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
@@ -502,7 +502,7 @@
 							<h3 class = "mt-3">ماء الورد للشعر: فوائد واستخدامات عديدة</h3>
 						</div>
 						<div class = "col-lg-4 col-md-6">
-								<h2 ><a href=""><img src="assets/img/imac.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+								<h2 ><a href=""><img src="assets/img/boy.png" width = "25px" alt=""></a>&nbsp;&nbsp;
 									الطفل
 							</h2>
 							<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
@@ -510,8 +510,8 @@
 								<span>30 سبتمبر 2019</span>
 								<h3 class = "mt-3">أسباب جفاف بشرة طفلك وطرق علاجها</h3>
 						</div>
-						<div class = "col-lg-4 col-md- mt+5">
-								<h2 ><a href=""><img src="assets/img/man.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+						<div class = "col-lg-4 col-md-6 mt-3">
+								<h2 ><a href=""><img src="assets/img/location.png" width = "25px" alt=""></a>&nbsp;&nbsp;
 									السياحة
 							</h2>
 							<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
@@ -523,7 +523,42 @@
 						</div>
 					<!---- secound health section-->
 					<div class = "addSection mt-5 text-center"><img src="assets/img/ADS 6.png" width= "950px" alt=""></div>
-			    </div>
+					<!---- third health section-->
+					<div class = "health">
+							<div class = "row mt-5">
+							<div class = "col-lg-4 col-md-6">
+									<h2 ><a href=""><img src="assets/img/girl.png" width = "25px" alt=""></a>&nbsp;&nbsp;
+									المرأة
+								</h2>
+								<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+								<img src="assets/img/woman.png" width = "290px" alt="">
+								<span>30 سبتمبر 2019</span>
+		
+								<h3 class = "mt-3">ماء الورد للشعر: فوائد واستخدامات عديدة</h3>
+							</div>
+							<div class = "col-lg-4 col-md-6">
+									<h2 ><a href=""><img src="assets/img/boy.png" width = "25px" alt=""></a>&nbsp;&nbsp;
+										الطفل
+								</h2>
+								<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+									<img src="assets/img/child.png" width = "290px"  alt="">
+									<span>30 سبتمبر 2019</span>
+									<h3 class = "mt-3">أسباب جفاف بشرة طفلك وطرق علاجها</h3>
+							</div>
+							<div class = "col-lg-4 col-md-6 mt-3">
+									<h2 ><a href=""><img src="assets/img/location.png" width = "25px" alt=""></a>&nbsp;&nbsp;
+										السياحة
+								</h2>
+								<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+									<img src="assets/img/home.png" width = "290px"  alt="">
+									<span>30 سبتمبر 2019</span>
+									<h3 class = "mt-3">أجمل البيوت في العالم</h3>
+							</div>
+							</div>
+							</div>
+						<!---- third health section-->
+					<div class = "addSection mt-5 text-center"><img src="assets/img/ADS 7.png" width= "950px" alt=""></div>
+				</div>
 				<div class = "col-lg-3 col-md-2 leftSideContent text-right">
 					<img class = "img-fluid " src="assets/img/ADS 2.png" alt=""  width = "230px">
 					<h2 class = " mt-3">أهم المقالات
@@ -550,7 +585,30 @@
 								<p>الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>
 						</div>
 						<img src="assets/img/ADS 5.png" class = "img-fluid mt-3" alt="" width = "230px">
-						<br><br><br><br>
+						<br>
+						<h3 class = " mt-3">فن اختيار شريك الحياة</h3>
+						<div class = "squareP" >
+								<p>الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>
+						</div>
+						<img class = "img-fluid mt-3" src="assets/img/num2.png" alt=""  width = "230px" height="200px">
+						<h3 class = " mt-3">20سنة على صدور أول كتاب في
+								<br> سلسلة هاري بوتر</h3>
+						<div class = "squareP" >
+							<p>الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>
+						</div>
+						<img class = "img-fluid mt-3" src="assets/img/num3.png" alt=""  width = "230px" height="200px">
+						<h3 class = "mt-3">أعلى 10 مرتفعات في العالم</h3>
+						<div class = "squareP" >
+								<p>الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>
+						</div>
+						<img class = "img-fluid mt-3" src="assets/img/num1.png" alt=""  width = "230px" height="200px">
+						<h3 class = " mt-3">فن اختيار شريك الحياة</h3>
+						<div class = "squareP" >
+								<p>الحياة . كيف تستمع بالحياة . كيف تتخلى عن النمطية تعلم أن تحب الحياة . ابحث عما يُسعدك الحياة اللغز الذي نبحث عن مكانه، الحياة ذاك ...الشيء البعيد</p>
+						</div>
+						<img src="assets/img/ADS 5.png" class = "img-fluid mt-3" alt="" width = "230px">
+						<br>
+					
 				</div>
 			</div>
 		</div>
