--- a/index.html
+++ b/index.html
@@ -457,29 +457,29 @@
 				    <div class = "health">
 					<div class = "row mt-5">
 					<div class = "col-lg-4 col-md-6">
-							<h2 ><a href=""><img src="assets/img/midicalIcon.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+							<h2 ><a href=""><img src="assets/img/midicalIcon.png" width = "20px" alt=""></a>&nbsp;&nbsp;
 								الصحة
 						</h2>
-						<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+						<p class = "lineP">__________________________</p>
 						<img src="assets/img/pic1.png" width = "290px" alt="">
 						<span>30 سبتمبر 2019</span>
 
 						<h3 class = "mt-3">أخطر 7 عمليات جراحية طارئة.. نسبة الوفاة تصل إلى 80 بالمئة</h3>
 					</div>
 					<div class = "col-lg-4 col-md-6">
-							<h2 ><a href=""><img src="assets/img/imac.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+							<h2 ><a href=""><img src="assets/img/imac.png" width = "20px" alt=""></a>&nbsp;&nbsp;
 								التقنية
 						</h2>
-						<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+						<p class = "lineP">__________________________</p>
 							<img src="assets/img/iPhone-11.png" width = "290px"  alt="">
 							<span>30 سبتمبر 2019</span>
 							<h3 class = "mt-3">بعد 4 أيام من الاستخدام: نظرة سريعة على آيفون 11 برو</h3>
 					</div>
-					<div class = "col-lg-4 col-md- mt+5">
-							<h2 ><a href=""><img src="assets/img/man.png" width = "30px" alt=""></a>&nbsp;&nbsp;
+					<div class = "col-lg-4 col-md-6">
+							<h2 ><a href=""><img src="assets/img/man.png" width = "20px" alt=""></a>&nbsp;&nbsp;
 								الرجل
 						</h2>
-						<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+						<p class = "lineP">__________________________</p>
 							<img src="assets/img/picture.png" width = "290px"  alt="">
 							<span>30 سبتمبر 2019</span>
 							<h3 class = "mt-3">6 أسئلة لا يجب أن تطرحيها على زوجك</h3>
