--- a/index.html
+++ b/index.html
@@ -492,32 +492,32 @@
 				<div class = "health">
 						<div class = "row mt-5">
 						<div class = "col-lg-4 col-md-6">
-								<h2 ><a href=""><img src="assets/img/girl.png" width = "25px" alt=""></a>&nbsp;&nbsp;
+								<h2 ><a href=""><img src="assets/img/girl.png" width = "20px" alt=""></a>&nbsp;&nbsp;
 								المرأة
 							</h2>
-							<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
+							<p class = "lineP">__________________________</p>
 							<img src="assets/img/woman.png" width = "290px" alt="">
 							<span>30 سبتمبر 2019</span>
 	
 							<h3 class = "mt-3">ماء الورد للشعر: فوائد واستخدامات عديدة</h3>
 						</div>
 						<div class = "col-lg-4 col-md-6">
-								<h2 ><a href=""><img src="assets/img/boy.png" width = "25px" alt=""></a>&nbsp;&nbsp;
+								<h2 ><a href=""><img src="assets/img/boy.png" width = "20px" alt=""></a>&nbsp;&nbsp;
 									الطفل
 							</h2>
-							<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
-								<img src="assets/img/child.png" width = "290px"  alt="">
+							<p class = "lineP">__________________________</p>
+							<img src="assets/img/child.png" width = "290px"  alt="">
 								<span>30 سبتمبر 2019</span>
 								<h3 class = "mt-3">أسباب جفاف بشرة طفلك وطرق علاجها</h3>
 						</div>
-						<div class = "col-lg-4 col-md-6 mt-3">
-								<h2 ><a href=""><img src="assets/img/location.png" width = "25px" alt=""></a>&nbsp;&nbsp;
+						<div class = "col-lg-4 col-md-6">
+								<h2 ><a href=""><img src="assets/img/location.png" width = "28px" alt=""></a>&nbsp;&nbsp;
 									السياحة
 							</h2>
-							<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
-								<img src="assets/img/home.png" width = "290px"  alt="">
+							<p class = "lineP">__________________________</p>
+							<img src="assets/img/home.png" width = "290px"  alt="">
 								<span>30 سبتمبر 2019</span>
-								<h3 class = "mt-3">أجمل البيوت في العالم</h3>
+								<h3 class = "mt-3">أجمل البيوت في العالم/h3>
 						</div>
 						</div>
 						</div>
@@ -527,37 +527,73 @@
 					<div class = "health">
 							<div class = "row mt-5">
 							<div class = "col-lg-4 col-md-6">
-									<h2 ><a href=""><img src="assets/img/girl.png" width = "25px" alt=""></a>&nbsp;&nbsp;
-									المرأة
+									<h2 ><a href=""><img src="assets/img/cookIcon.png" width = "20px" alt=""></a>&nbsp;&nbsp;
+									الطبخ والطعام
 								</h2>
-								<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
-								<img src="assets/img/woman.png" width = "290px" alt="">
+								<p class = "lineP">__________________________</p>
+								<img src="assets/img/cook.png" width = "290px" alt="">
 								<span>30 سبتمبر 2019</span>
 		
-								<h3 class = "mt-3">ماء الورد للشعر: فوائد واستخدامات عديدة</h3>
+								<h3 class = "mt-3">طريقة الطبخ في قدر البخار</h3>
 							</div>
 							<div class = "col-lg-4 col-md-6">
-									<h2 ><a href=""><img src="assets/img/boy.png" width = "25px" alt=""></a>&nbsp;&nbsp;
-										الطفل
+									<h2 ><a href=""><img src="assets/img/goal.png" width = "20px" alt=""></a>&nbsp;&nbsp;
+										تنمية الذات
 								</h2>
-								<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
-									<img src="assets/img/child.png" width = "290px"  alt="">
+								<p class = "lineP">__________________________</p>
+								<img src="assets/img/self.png" width = "290px"  alt="">
 									<span>30 سبتمبر 2019</span>
-									<h3 class = "mt-3">أسباب جفاف بشرة طفلك وطرق علاجها</h3>
+									<h3 class = "mt-3">كيف تستنزف الفوضى تفكيرك وكيف يمكنك التخلّص منها؟</h3>
 							</div>
-							<div class = "col-lg-4 col-md-6 mt-3">
-									<h2 ><a href=""><img src="assets/img/location.png" width = "25px" alt=""></a>&nbsp;&nbsp;
-										السياحة
+							<div class = "col-lg-4 col-md-6">
+									<h2 ><a href=""><img src="assets/img/game.png" width = "28px" alt=""></a>&nbsp;&nbsp;
+										الألعاب الإلكترونية
 								</h2>
-								<p style=" color:#218FC2; font-weight: bold;"></p>________________________________</p>
-									<img src="assets/img/home.png" width = "290px"  alt="">
+								<p class = "lineP">__________________________</p>
+								<img src="assets/img/gaming-impact.png" width = "290px"  alt="">
 									<span>30 سبتمبر 2019</span>
-									<h3 class = "mt-3">أجمل البيوت في العالم</h3>
+									<h3 class = "mt-3">الألعاب الإلكترونية وتأثيرها على أبنائنا</h3>
 							</div>
+							
 							</div>
 							</div>
 						<!---- third health section-->
 					<div class = "addSection mt-5 text-center"><img src="assets/img/ADS 7.png" width= "950px" alt=""></div>
+					<!---- forth news section-->
+					<div class = "health">
+						<div class = "row mt-5">
+						<div class = "col-lg-4 col-md-6">
+								<h2 ><a href=""><img src="assets/img/cookIcon.png" width = "20px" alt=""></a>&nbsp;&nbsp;
+								الطبخ والطعام
+							</h2>
+							<p class = "lineP">__________________________</p>
+							<img src="assets/img/cook.png" width = "290px" alt="">
+							<span>30 سبتمبر 2019</span>
+	
+							<h3 class = "mt-3">طريقة الطبخ في قدر البخار</h3>
+						</div>
+						<div class = "col-lg-4 col-md-6">
+								<h2 ><a href=""><img src="assets/img/goal.png" width = "20px" alt=""></a>&nbsp;&nbsp;
+									تنمية الذات
+							</h2>
+							<p class = "lineP">__________________________</p>
+							<img src="assets/img/self.png" width = "290px"  alt="">
+								<span>30 سبتمبر 2019</span>
+								<h3 class = "mt-3">كيف تستنزف الفوضى تفكيرك وكيف يمكنك التخلّص منها؟</h3>
+						</div>
+						<div class = "col-lg-4 col-md-6">
+								<h2 ><a href=""><img src="assets/img/game.png" width = "28px" alt=""></a>&nbsp;&nbsp;
+									الألعاب الإلكترونية
+							</h2>
+							<p class = "lineP">__________________________</p>
+							<img src="assets/img/gaming-impact.png" width = "290px"  alt="">
+								<span>30 سبتمبر 2019</span>
+								<h3 class = "mt-3">الألعاب الإلكترونية وتأثيرها على أبنائنا</h3>
+						</div>
+						
+						</div>
+					</div>
+					<!---- forth news section-->
 				</div>
 				<div class = "col-lg-3 col-md-2 leftSideContent text-right">
 					<img class = "img-fluid " src="assets/img/ADS 2.png" alt=""  width = "230px">
