--- a/index.html
+++ b/index.html
@@ -563,34 +563,36 @@
 					<div class = "health">
 						<div class = "row mt-5">
 						<div class = "col-lg-4 col-md-6">
-								<h2 ><a href=""><img src="assets/img/cookIcon.png" width = "20px" alt=""></a>&nbsp;&nbsp;
-								الطبخ والطعام
+								<h2 ><a href=""><img src="assets/img/leadership.png" width = "20px" alt=""></a>&nbsp;&nbsp;
+								ريادة الأعمال
 							</h2>
 							<p class = "lineP">__________________________</p>
-							<img src="assets/img/cook.png" width = "290px" alt="">
-							<span>30 سبتمبر 2019</span>
+							<img src="assets/img/passion-780x405.png" width = "290px" alt="">
+							<span>03 أكتوبر 2019</span>
 	
-							<h3 class = "mt-3">طريقة الطبخ في قدر البخار</h3>
+							<h3 class = "mt-3">عمل مشروع مربح جداً</h3>
 						</div>
-						<div class = "col-lg-4 col-md-6">
-								<h2 ><a href=""><img src="assets/img/goal.png" width = "20px" alt=""></a>&nbsp;&nbsp;
-									تنمية الذات
+						<div class = "col-lg-8 col-md-6">
+								<h2 ><a href=""><img src="assets/img/leadership.png" width = "20px" alt=""></a>&nbsp;&nbsp;
+								منوعات
 							</h2>
-							<p class = "lineP">__________________________</p>
-							<img src="assets/img/self.png" width = "290px"  alt="">
-								<span>30 سبتمبر 2019</span>
-								<h3 class = "mt-3">كيف تستنزف الفوضى تفكيرك وكيف يمكنك التخلّص منها؟</h3>
+							<p class = "lineP">_______________________________________________________</p>
+							<div class = "row">
+							<div class = "col-lg-6">
+									<img src="assets/img/passion-780x405.png" width = "290px" alt="">
+									<span>03 أكتوبر 2019</span>
+			
+									<h3 class = "mt-3">عمل مشروع مربح جداً</h3>
+							</div>
+							<div class = "col-lg-6">
+									<img src="assets/img/passion-780x405.png" width = "290px" alt="">
+									<span>03 أكتوبر 2019</span>
+			
+									<h3 class = "mt-3">عمل مشروع مربح جداً</h3>
+							</div>
 						</div>
-						<div class = "col-lg-4 col-md-6">
-								<h2 ><a href=""><img src="assets/img/game.png" width = "28px" alt=""></a>&nbsp;&nbsp;
-									الألعاب الإلكترونية
-							</h2>
-							<p class = "lineP">__________________________</p>
-							<img src="assets/img/gaming-impact.png" width = "290px"  alt="">
-								<span>30 سبتمبر 2019</span>
-								<h3 class = "mt-3">الألعاب الإلكترونية وتأثيرها على أبنائنا</h3>
 						</div>
-						
+					
 						</div>
 					</div>
 					<!---- forth news section-->
