--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 	<div class = "mainSection">
 			<div class = "row mt-5 text-right">
 				<div class = "col-lg-9 col-md-10 rightSideContent">
-					<div class = "row">
+					<div class = "row ">
 						<div class = "col-lg-6 col-md-12">
 							<div class ="triangle">
 								<div class ="clearfix">
@@ -240,8 +240,8 @@
 								</div>
 							</div>
 						</div>
-						<div class = "col-lg-6 col-md-12">
-							<div class ="triangle">
+						<div class = "col-lg-6 col-md-12 ">
+							<div class ="triangle row1">
 									<div class ="clearfix">
 										<div class = "float-right">
 											<h2 class = "mt-3 mr-3">مقالات كثيرة عن الحياة</h2>
@@ -327,7 +327,7 @@
 							</div>
 						</div>
 						<div class = "col-lg-6">
-							<div class ="triangle">
+							<div class ="triangle row1">
 									<div class ="clearfix">
 										<div class = "float-right">
 											<h2 class = "mt-3 mr-3">مقالات كثيرة عن الحياة</h2>
@@ -581,13 +581,13 @@
 							</h2>
 							<p class = "lineP">_______________________________________________________</p>
 							<div class = "row">
-							<div class = "col-lg-6 col-md-3 SpanTypes">
+							<div class = "col-lg-6 col-md-6 SpanTypes">
 									<img src="assets/img/ola.png" width = "290px" alt="">
 									<span>03 أكتوبر 2019</span>
 			
 									<h3 class = "mt-3">تضامناً مع مُذيعة سعودية.. علا الفارس تهاجم "MBC" بشدة</h3>
 							</div>
-							<div class = "col-lg-6 col-md-3 SpanTypes">
+							<div class = "col-lg-6 col-md-6 SpanTypes">
 									<img src="assets/img/donia.png" width = "290px" alt="">
 									<span>03 أكتوبر 2019</span>
 			
